--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
-     <ul>
-       <li>Enter your JavaScript notes here</li>
-     </ul>
+        <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Javascript has a built in math object that can be used for math functions.</li>
+        </ul>
       </section>
     </main>
 
